--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 =========================
+Changes in version 1.1.67
+=========================
+
+- Fix a bug in reverse-lookup support used by the visual editor.
+
+=========================
 Changes in version 1.1.66
 =========================
 
