--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,18 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 =========================
+Changes in version 1.1.78
+=========================
+
+- Clean up group context code, replacing array with
+  keyed object.
+
+- Remove stale "oops" attribute code.
+
+- Implement require and reject condition attributes
+  on cs:group with "label-empty-or-alpha" value.
+
+=========================
 Changes in version 1.1.77
 =========================
 
