--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,13 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 =========================
+Changes in version 1.1.79
+=========================
+
+- Recognize require and reject attribute on cs:text in
+  value and term modes.
+
+=========================
 Changes in version 1.1.78
 =========================
 
