--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,13 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 =========================
+Changes in version 1.1.83
+=========================
+
+- Fix hang condition triggered when single straight quotes were set as
+  inner quotes, and a field contained a straight-quote apostrophe.
+
+=========================
 Changes in version 1.1.82
 =========================
 
