--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 =========================
+Changes in version 1.1.88
+=========================
+
+- With comma-safe, always return true a term exists and is alpha.
+
+=========================
 Changes in version 1.1.87
 =========================
 
