--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,13 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 =========================
+Changes in version 1.1.90
+=========================
+
+- Return false for comma-safe when term set is a value term
+  on cs:text.
+
+=========================
 Changes in version 1.1.89
 =========================
 
