--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,13 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 =========================
+Changes in version 1.1.93
+=========================
+
+- Expose field-hack decoding as parseNoteFieldHacks() method\
+  on CSL object.
+
+=========================
 Changes in version 1.1.92
 =========================
 
