--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,10 +1,17 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 =========================
+Changes in version 1.1.94
+=========================
+
+- Extend parseNoteFieldHacks() to accept a hash object of
+  valid-field flags.
+
+=========================
 Changes in version 1.1.93
 =========================
 
-- Expose field-hack decoding as parseNoteFieldHacks() method\
+- Expose field-hack decoding as parseNoteFieldHacks() method
   on CSL object.
 
 =========================
