--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,13 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 =========================
+Changes in version 1.1.96
+=========================
+
+- Handle DOS and Mac line endings correctly when parsing serialized
+  XML.
+
+=========================
 Changes in version 1.1.95
 =========================
 
