--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,20 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.1.104
+==========================
+
+- Rework the year-suffix fix introduced at 1.1.100, which
+  broke on a separate, as-yet-untested disambiguation issue.
+
+- Split `authority` and `committee` field content on a semicolon,
+  and cast as multiple name elements. Affects CSL-M
+  mode only.
+
+- Fix bugs in the handling of extended locator elements
+  (locator-date and locator-extra).
+
+==========================
 Changes in version 1.1.103
 ==========================
 
