--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,13 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.1.112
+==========================
+
+- Fix multilingual bug, triggered by settings that invoked
+  a tertiary variant.
+
+==========================
 Changes in version 1.1.111
 ==========================
 
