--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,14 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.1.119
+==========================
+
+- Fix delimiter bug affecting some numeric styles:
+
+  https://forums.zotero.org/discussion/62288/citeprocjs-bug/
+
+==========================
 Changes in version 1.1.118
 ==========================
 
