--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,13 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.1.125
+==========================
+
+- Add synchronous function CSL.getLocaleNames() to return a list of valid
+  CSL locale IDs appropriate for a given style.
+
+==========================
 Changes in version 1.1.124
 ==========================
 
