--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,15 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.1.126
+==========================
+
+- Fix bug affecting numeric styles, identified by 
+  Derek Sifford (dsifford):
+
+  https://github.com/Juris-M/citeproc-js/issues/17
+
+==========================
 Changes in version 1.1.125
 ==========================
 
