--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,17 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.1.130
+==========================
+
+- Further fix for "no." label on number variable:
+
+  * Force literal rendering following a non-numeric entity
+  * Call "number" term when "no." short-code is used in "number"
+    variable only, but falling back to "issue" label if "number" 
+    locale term is empty or undefined.
+
+==========================
 Changes in version 1.1.129
 ==========================
 
