--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,13 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.1.134
+==========================
+
+- Fix bug in placeholder label handling that blocked rendering
+  for ordinary numbers (edition, volume, etc).
+
+==========================
 Changes in version 1.1.133
 ==========================
 
