--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,13 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.1.136
+==========================
+
+- Permit non-conforming entries on the first line of "note" when
+  parsing "cheater syntax."
+
+==========================
 Changes in version 1.1.135
 ==========================
 
