--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,15 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.1.138
+==========================
+
+- Retain leading zeros on numeric fields, without clobbering
+  is-numeric test result. Thread:
+
+    https://forums.zotero.org/discussion/comment/263404#Comment_263404
+
+==========================
 Changes in version 1.1.137
 ==========================
 
