--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,18 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.1.139
+==========================
+
+- Fix hyphenated-strings bug in numeric rendering:
+
+    https://forums.zotero.org/discussion/comment/264119
+
+- Append a non-numeric character to generated citationIDs:
+
+    https://github.com/Juris-M/citeproc-js/issues/22
+
+==========================
 Changes in version 1.1.138
 ==========================
 
