--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,16 @@ Summary of changes to citeproc-js since version 1.0.0 release.
 Changes in version 1.1.139
 ==========================
 
+- Fix name disambiguation failure in bib that manifested in
+  bibliography in modern browser environments.
+
+    https://github.com/citation-style-language/styles/pull/2278
+
+
+==========================
+Changes in version 1.1.139
+==========================
+
 - Fix hyphenated-strings bug in numeric rendering:
 
     https://forums.zotero.org/discussion/comment/264119
