--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,14 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.1.140
+==========================
+
+- Fix subsequent-author-substitute for single-field names.
+
+    https://forums.zotero.org/discussion/comment/264815#Comment_264828
+
+==========================
 Changes in version 1.1.139
 ==========================
 
