--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,13 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.1.144
+==========================
+
+- Use a CSL logging method, not "print," to report
+  a fatal error in XML parsing.
+
+==========================
 Changes in version 1.1.143
 ==========================
 
