--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,13 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.1.149
+==========================
+
+- Fix failure to parse correctly formatted small-caps in-text
+  markup.
+
+==========================
 Changes in version 1.1.148
 ==========================
 
