--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,13 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.1.153
+==========================
+
+- Permit abbreviation loading via a getAbbreviation() function
+  that does not return a value. Should now be backward-compatible.
+
+==========================
 Changes in version 1.1.152
 ==========================
 
