--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,15 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.1.157
+==========================
+
+- Make sorts of citation-number operate on cite entries rather
+  than citation labels. Follows discussion here:
+
+    https://github.com/citation-style-language/test-suite/issues/1
+
+==========================
 Changes in version 1.1.156
 ==========================
 
