--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,14 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.1.161
+==========================
+
+- Workaround to accommodate "single-field" names set as "name" rather than now-normal "literal."
+
+- In non-numeric styles only, silently omit references not rendered in the bibliography.
+
+==========================
 Changes in version 1.1.160
 ==========================
 
