--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,14 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.1.162
+==========================
+
+- Rerelease of 1.1.162 to purge bad citeproc.js bundle.
+
+    https://github.com/Juris-M/citeproc-js/issues/40
+
+==========================
 Changes in version 1.1.161
 ==========================
 
